08_Ingress/ingress/pay.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      name: pay-pod
      labels:
        app: pay
    spec:
      containers:
      - image: whatwant/node-web:2.0
        name: pay-container
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: pay-service
spec:
  type: ClusterIP
  # clusterIP: 10.100.10.10
  selector:
    app: pay
  ports:
  - port: 80
    targetPort: 8080
